--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "strapi-plugin-email": "3.2.0",
     "strapi-plugin-upload": "3.2.0",
     "strapi-plugin-users-permissions": "3.2.0",
+    "strapi-provider-upload-cloudinary": "^3.2.0",
     "strapi-utils": "3.2.0"
   },
   "author": {
