--- a/api/bat/models/bat.settings.json
+++ b/api/bat/models/bat.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "bats",
   "info": {
-    "name": "bat"
+    "name": "bat",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -40,6 +41,10 @@
     "available": {
       "type": "boolean",
       "default": true,
+      "required": true
+    },
+    "weight": {
+      "type": "string",
       "required": true
     }
   }
